add lists api methods
